bad/bin_op_le_bool_null.example_compiler_output
ERROR
[1mbad/bin_op_le_bool_null.lat:3:7: [1;31merror: [0;1moperator <= is defined only for int values and string values, not `boolean` and `null`[m
	true <= null;
	     [1;32m^[m
